@@ -26,7 +26,9 @@ ALL_CPP = Camera.cpp TrackerThread.cpp TrackerConfig.cpp Blob.cpp FWCamera.cpp R
 
 TESTS=testimaging
 
-EXTRA_DIST = avgtrackerrc.minimal $(wildcard testimages/*.png)
+EXTRA_DIST = avgtrackerrc.minimal $(wildcard testimages/*.png) \
+        CMUCamera.h CMUCamera.cpp DSCamera.cpp DSCamera.h DSHelper.h DSHelper.cpp \
+        DSSampleQueue.h DSSampleQueue.cpp
 
 noinst_LTLIBRARIES = libimaging.la
 libimaging_la_SOURCES = $(ALL_CPP) $(ALL_H)
