@@ -1,3 +1,7 @@
+libavg 0.9.0.pre2 - August 11, 2009
+
+  svn revision 4063
+
 libavg 0.9.0.pre1 - August 9, 2009
 
   svn revision 4046
